쉬운 계단 수 19.04.01

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,13 @@ LINE/[190316]1.py
 LINE/[190316]2.py
 LINE/[190316]4.py
 LINE/[190316]5.py
+[kakao]181124/1.2)Maximizing profit from stocks.png
+[kakao]181124/1.1)Maximizing profit from stocks.png
+[kakao]181124/2.1)Money Collection.png
+[kakao]181124/2.2)Money Collection.png
+[kakao]181124/3.1)Climbing the Leaderboard.png
+[kakao]181124/3.2)Climbing the Leaderboard.png
+[kakao]181124/3.3)Climbing the Leaderboard.png
+[kakao]181124/4.1)Newyear Chaos.png
+[kakao]181124/4.2)Newyear Chaos.png
+[kakao]181124/Untitled.ipynb
